changed background size in html body to 100% to fix background image bug on mobile devices

--- a/style.css
+++ b/style.css
@@ -8,13 +8,11 @@ Basic Setup
     box-sizing: border-box;
 }
 
-body {
+html, body {
     width: 100%;
     min-height: 100%;
-}
-
-html {
     background-color: #fff;
+    background-size: 100%;
     font-family: 'Lato', 'Arial', sans-serif;
     font-weight: 300;
     font-size: 25px;
@@ -42,7 +40,7 @@ header {
 header h1 {
     color: #fff;
     font-size: 300%;
-    font-weight: 300;
+    font-weight: 200;
     margin-bottom: 10%;
     margin-top: 5%;
 }
@@ -304,7 +302,7 @@ a:visited {
         background-color: transparent;
         justify-content: center;
         padding-bottom: 30px;
-        font-size: .60em;
+        font-size: .80em;
     }
 
     .hamburger-toggle {
@@ -326,5 +324,17 @@ a:visited {
 
     .section-about p {
         font-size: 80%;
+    }
+
+    header h1 {
+        color: #fff;
+        font-size: 200%;
+        font-weight: 200;
+        margin-bottom: 10%;
+        margin-top: 5%;
+    }
+
+    header h2 {
+        font-size: 100%;
     }
   } 
